Add latest files.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,116 @@
-Hello, World!
+<!DOCTYPE html>
+<html>
+  <!--#include virtual="commonhead.html" -->
+<head>
+  <meta charset="utf-8">
+  <meta name="Description" content="SamurAI Coding 2014">
+  <meta name="author" content="Hironori Washizaki">
+  <title>SamurAI Coding 2014</title>
+  <link rel="stylesheet" href="stylesheets/default.css">
+</head>
+
+  <body>
+  <!--#include virtual="header.html" -->
+<header id="mast">
+  <img src="images/samurailogo.png" width="391" height="90" alt="" title=""/>
+  <nav id="global">
+      <ul>
+        <li><a href=".">Home</a></li>
+        <li><a href="schedule.html">Schedule</a></li>
+        <li><a href="rules.html">Rules</a></li>
+        <li><a href="software.html">Software</a></li>
+	<li><a href="entry.html">Entry</a></li>
+	<li><a href="preliminary.html">Prelminary</a></li>
+	<li><a href="final.html">Final</a></li>
+	<li><a href="faq.html">FAQ</a></li>
+	<li><a href="index-jp.html">Japanese</a></li>
+      </ul>
+  </nav>
+</header>
+<hr/>
+
+    <section id="main">
+      <header>
+    	<h2>IPSJ International AI Programming Contest: SamurAI Coding 2014-15</h2>
+      </header>
+      <p>As the Internet industry rapidly grows, there is an intensifying need for high quality engineers and programmers.
+	Information Processing Society of Japan (IPSJ) conducted the international AI programming contest "SamurAI Coding" in 2012 and 2013, 
+aimings to cultivate the younger generation so they can become leading researchers,
+	developers and successful on global level 
+	(<a href="2012photos.html">1st SamurAI Coding Final Photos in 2012</a> and 2nd Final Results in 2013).
+      <p>3rd SamurAI Coding will held between September 2014 and March 2015.
+	Contestants will be competing their engineering skills for AI game programming and 
+	the winners of the preliminary round will move on to the final round, which will be held on March 18 2015 collocated with 77th IPSJ National Convention in Kyoto (TBD).
+	Participating engineers will be able to measure their skills on a global level through this contest.</p>
+    </section>
+    <section id="news">
+      <h2>News</h2>
+      <ul>
+	<li>May 1: This preliminary website has been launched.
+	</li>
+      </ul>
+    </section>
+
+    <section id="importantdates">
+      <h2>Important Dates</h2>
+      <ul>
+	<li>Rule and platform announcement: September, 2014 (TBD)</li>
+	<li>Online preliminary round: November or December, 2014 (TBD)</li>
+	<li>Final round in Kyoto: March 18, 2015</li>
+      </ul>
+    </section>
+
+    <section class="centered">
+<p>
+      (The following screenshot is taken from 2012. 
+This year new game rule and platform will be used.)
+</p>
+      <img src="images/gamefield.png" alt="Rokkaku Conquest Game Field"
+	   title="Rokkaku Conquest Game Field"/>
+    </section>
+    <!--#include virtual="footer.html" -->
+<footer>
+  <div>
+    <table class="multicolumn">
+      <tr>
+	<td width="250">
+	  <section id="contact">
+	    <h3>Information Processing Society of Japan</a></h3>
+	    <p class=address>Kagaku-kaikan (Chemistry Hall) 4F<br>
+	      1-5 Kanda-Surugadai, Chiyoda-ku,
+	      Tokyo 101-0062 JAPAN<br>
+	    email: <a class="contactadddr" href="mailto:samurai2014-contact@ipsj.or.jp">
+
+		samurai2014-contact@ipsj.or.jp</a><br>
+web: <a href="http://www.ipsj.or.jp">http://www.ipsj.or.jp</a>
+</p>				
+	    <h3>Final Round Cosponsor</h3>
+	    <p>(TBD)</p>
+	  </section>
+	</td>
+	<td width="300">
+	  <section id="sponsors">
+	    <h3>Shogun Sponsor</h3>
+	    (TBD)
+	    <h3>Platinum Sponsor</h3>
+	    (TBD)
+	    <h3>Gold Sponsors</h3>
+	    (TBD)
+	  </section>
+	</td>
+	<td>
+	  <section id="supporters">
+	    <h3>Supporters</h3>
+	    <p class="smaller">
+	    (TBD)
+	    </p>
+	  </section>
+	</td>
+      </tr>
+    </table>
+  </div>
+</footer>
+
+
+  </body>
+</html>
