--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 	Information Processing Society of Japan (IPSJ) conducted the international AI programming contest "SamurAI Coding" in 2012 and 2013, 
 aimings to cultivate the younger generation so they can become leading researchers,
 	developers and successful on global level 
-	(<a href="2012photos.html">1st SamurAI Coding Final Photos in 2012</a> and 2nd Final Results in 2013).
+	(<a href="2012photos.html">1st SamurAI Coding Final Photos in 2012</a> and
+	<a href="http://www.ipsj.or.jp/event/samuraicoding/2013/final-result-jp.html">2nd Final Results in 2013</a>).
       <p>3rd SamurAI Coding will held between September 2014 and March 2015.
 	Contestants will be competing their engineering skills for AI game programming and 
 	the winners of the preliminary round will move on to the final round, which will be held on March 18 2015 collocated with 77th IPSJ National Convention in Kyoto (TBD).
