--- a/index-jp.html
+++ b/index-jp.html
@@ -3,7 +3,7 @@
   <!--#include virtual="commonhead.html" -->
 <head>
   <meta charset="utf-8">
-  <meta name="Description" content="SamurAI Coding 2014">
+  <meta name="description" content="SamurAI Coding 2014">
   <meta name="author" content="Hironori Washizaki">
   <title>SamurAI Coding 2014</title>
   <link rel="stylesheet" href="stylesheets/default.css">
@@ -23,6 +23,7 @@
 	<li><a href="preliminary-jp.html">予選</a></li>
 	<li><a href="final-jp.html">決勝</a></li>
 	<li><a href="faq-jp.html">FAQ</a></li>
+	<li><a href="sponsor-jp.html">スポンサー</a></li>
 	<li><a href="index.html">English</a></li>
       </ul>
   </nav>
@@ -38,17 +39,19 @@
 	ますます重要となっています。情報処理学会は若い世代から将来第一
 	線の研究者や開発者になりうる、また世界市場を舞台に活躍できる人
 	材を育てることを目的として、国際的なAIプログラミングコンテスト 
-"SamurAI Coding" を 2012 年度および 2013 年度に開催いたしました
-（<a href="2012photos.html">2012年度決勝の様子</a>、2013年度決勝の結果）。</p>
+	"SamurAI Coding" を 2012 年度および 2013 年度に開催いたしました
+	（<a href="2012photos.html">2012年度決勝の様子</a>、
+	<a href="http://www.ipsj.or.jp/event/samuraicoding/2013/final-result-jp.html">2013年度決勝の結果</a>）。</p>
       <p>今年度も SamurAI Coding 2014-15 を開催いたします。ゲームをテーマ
 	にしたプログラミングスキルを競い、予選を勝ち抜いたチームが2015年3月
 	に京都で開催する決勝へ進みます。決勝は情報処理学会 第77回全国大会
-に併設される予定です。参加エンジニアはその能力が世界
+	に併設される予定です。参加エンジニアはその能力が世界
 	で通用するか本コンテストを通じて試すことができます。</p>
     </section>
     <section id="news">
-      <h2>ニュース: 決勝の結果</h2>
+      <h2>ニュース</h2>
       <ul>
+	<li>8月4日: <a href="sponsor-jp.html">スポンサーの募集</a>を開始しました。</li>
 	<li>5月1日: 本予告サイトを立ち上げました。</li>
       </ul>
     </section>
