--- a/sponsor-jp.html
+++ b/sponsor-jp.html
@@ -54,7 +54,8 @@ IPSJ International AI Programming Contest "SamurAI Coding" を開催
       </p>
     </section>
 
-    <footer>
+    <!--#include virtual="footer-jp.html" -->
+<footer>
   <div>
     <table class="multicolumn">
       <tr>
@@ -62,59 +63,23 @@ IPSJ International AI Programming Contest "SamurAI Coding" を開催
 	  <section id="contact">
 	    <h3>情報処理学会</h3>
 	    <p class=address>〒101-0062 東京都千代田区駿河台1-5 化学会館 ４階</p>
-	    <p>email: <a class="contactadddr" href="mailto:samurai2013-contact@ipsj.or.jp">
-		samurai2013-contact@ipsj.or.jp</a></p>				
+	    <p>email: <a class="contactadddr" href="mailto:samurai2014-contact@ipsj.or.jp">
+		samurai2014-contact@ipsj.or.jp</a></p>				
 	    <h3>決勝共催</h3>
-	    <p>東京大学情報理工学系研究科</p>
+	    <p></p>
 	  </section>
 	</td>
 	<td width="300">
 	  <section id="sponsors">
 	    <h3>将軍スポンサー</h3>
-	    匿名の個人の方
 	    <h3>プラチナスポンサー</h3>
-	    <img src="images/gree-logo.jpg" width="120" alt="Gree" title=""/>
 	    <h3>ゴールドスポンサー</h3>
-	    <table>
-	      <tr><td>
-		  <img src="images/hitachi-logo.gif" width="100" alt="Hitachi"
-		       title=""/>
-	      </td>
-	      <td>
-		  <div style="width:95px; height:14px; overflow:hidden;
-			      background-color:white";>
-		    <div style="margin-left:-40px; margin-top:-48px">
-		      <img src="images/pfi_logo.png" width="140"
-			   alt="PFI" title=""/>
-		    </div>
-		  </div>
-	      </td></tr>
-	    </table>
-	    <!-- <p>イベントをご支援いただけるスポンサーを募集しています。スポンサー -->
-	    <!--   の種別など、詳しくは<a href="sponsorship-application-jp.pdf"> -->
-	    <!-- 	スポンサー申込書</a>を御覧ください。</p> -->
 	  </section>
 	</td>
 	<td>
 	  <section id="supporters">
 	    <h3>協賛</h3>
-	    <p class="smaller">
-	      情報サービス産業協会、
-              日本情報システム・ユーザ協会、
-              電子情報技術産業協会、
-              電子情報通信学会、
-              人工知能学会、
-              日本ソフトウェア科学会、
-              IEEE-Computer Society,
-              IEEE-Computer Society Japan Chapter,
-              IEEE Japan Office
-	    </p>
 	    <h3>後援</h3>
-	    <p class="smaller">
-	      文部科学省、
-              経済産業省、
-              外務省、
-              情報処理推進機構</p>
 	  </section>
 	</td>
       </tr>
