--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
   <nav id="global">
       <ul>
         <li><a href=".">Home</a></li>
-        <li><a href="schedule.html">Schedule</a></li>
-        <li><a href="rules.html">Rules</a></li>
-        <li><a href="software.html">Software</a></li>
-	<li><a href="entry.html">Entry</a></li>
-	<li><a href="preliminary.html">Prelminary</a></li>
-	<li><a href="final.html">Final</a></li>
-	<li><a href="faq.html">FAQ</a></li>
+        <li><!--<a href="schedule.html">Schedule</a>-->Schedule</li>
+        <li><!--<a href="rules.html">Rules</a>-->Rules</li>
+        <li><!--<a href="software.html">Software</a>-->Software</li>
+	<li><!--<a href="entry.html">Entry</a>-->Entry</li>
+	<li><!--<a href="preliminary.html">Prelminary</a>-->Prelminary</li>
+	<li><!--<a href="final.html">Final</a>-->Final</li>
+	<li><!--<a href="faq.html">FAQ</a>-->FAQ</li>
 	<li><a href="index-jp.html">Japanese</a></li>
       </ul>
   </nav>
