--- a/index-jp.html
+++ b/index-jp.html
@@ -16,15 +16,15 @@
   <nav id="global">
       <ul>
         <li><a href=".">ホーム</a></li>
-        <li><!--<a href="schedule-jp.html">日程</a>--><div>日程</div></li>
-        <li><!--<a href="rules-jp.html">ルール</a>--><div>ルール</div></li>
-        <li><!--<a href="software-jp.html">ソフトウェア</a>--><div>ソフトウェア</div></li>
-	<li><!--<a href="entry-jp.html">参加登録</a>--><div>参加登録</div></li>
-	<li><!--<a href="preliminary-jp.html">予選</a>--><div>予選</div></li>
-	<li><!--<a href="final-jp.html">決勝</a>--><div>決勝</div></li>
-	<li><!--<a href="faq-jp.html">FAQ</a>--><div>FAQ</div></li>
-	<li><a href="sponsor-jp.html">スポンサー</a></li>
-	<li><a href="index.html">English</a></li>
+        <li><a href="#">日程</a></li>
+        <li><a href="#">ルール</a></li>
+        <li><a href="#">ソフトウェア</a></li>
+        <li><a href="#">参加登録</a></li>
+        <li><a href="#">予選</a></li>
+        <li><a href="#">決勝</a></li>
+        <li><a href="#">FAQ</a></li>
+        <li><a href="sponsor-jp.html">スポンサー</a></li>
+        <li><a href="index.html">English</a></li>
       </ul>
   </nav>
 </header>
