--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   <nav id="global">
       <ul>
         <li><a href=".">Home</a></li>
-        <li><!--<a href="schedule.html">Schedule</a>-->Schedule</li>
-        <li><!--<a href="rules.html">Rules</a>-->Rules</li>
-        <li><!--<a href="software.html">Software</a>-->Software</li>
-	<li><!--<a href="entry.html">Entry</a>-->Entry</li>
-	<li><!--<a href="preliminary.html">Prelminary</a>-->Prelminary</li>
-	<li><!--<a href="final.html">Final</a>-->Final</li>
-	<li><!--<a href="faq.html">FAQ</a>-->FAQ</li>
-	<li><a href="index-jp.html">Japanese</a></li>
+        <li><a href="#">Schedule</a></li>
+        <li><a href="#">Rules</a></li>
+        <li><a href="#">Software</a></li>
+        <li><a href="#">Entry</a></li>
+        <li><a href="#">Prelminary</a></li>
+        <li><a href="#">Final</a></li>
+        <li><a href="#">FAQ</a></li>
+        <li><a href="index-jp.html">Japanese</a></li>
       </ul>
   </nav>
 </header>
