Update Japanese site

--- a/rule-jp.html
+++ b/rule-jp.html
@@ -31,26 +31,15 @@
 <hr/>
 
     <section id="main">
-      <h2>スポンサー募集</h2>
+      <h2>ゲーム内容</h2>
       <p>
-情報処理学会では2012年度より、新たな取り組みといたしまして、昨今
-のインターネット産業の急速な発展によるエンジニアの質と量の確保が
-ますます重要となるなか、若い世代から将来第一線の研究者や開発者に
-なりうる、また世界市場を舞台に活躍できる人材を育てることを開催の
-目的として、AIプログラミングコンテスト、
-IPSJ International AI Programming Contest "SamurAI Coding" を開催
-しております。
+本コンテストではAIプログラム同士をゲーム上で戦わせる対戦型AIプログラミングを実施します。<br>
+題材となるゲームはオークションをテーマとしており、対戦相手の手を読み合い、騙し合いながら、様々なアイテムを競り落とします。<br>
+参加者はプログラミングスキルに加えて、アルゴリズムやAIストラテジーの設計スキルで競い合います。
       </p>
       <p>
-今年度も SamurAI Coding 2014-15 を開催いたします。ゲームをテーマ
-にしたプログラミングスキルを競います。世界規模の大会を目指し、世界
-中から参加者を募りネット上で予選を開催、予選を勝ち抜いたチームが
-2015年3月に日本で開催する決勝へ進みます。参加エンジニアはその能力
-が世界で通用するか本コンテストを通じて試すことができます。
-決勝では、アワードセレモニーも開催し、上位入賞者を表彰します。
-決勝進出者、スポンサー企業の皆様等との交流の場として懇親会の席も設
-ける予定です。
-ご賛同を頂ける場合には、<a href="https://www.ipsj.or.jp/02moshikomi/event/samurai_coding2014-15_sponsor.html">こちらの申込Webページ</a>よりお申込ください。
+参加者は、次の代表的なプログラミング言語をAIの実装に利用できます: <br>
+C, C++, C#, Java, Scala, Ruby, Python, Perl, PHP, Haskell, JavaScript
       </p>
     </section>
 
@@ -64,7 +53,7 @@ IPSJ International AI Programming Contest "SamurAI Coding" を開催
             <h3>情報処理学会</h3>
             <p class=address>〒101-0062 東京都千代田区駿河台1-5 化学会館 ４階</p>
             <p>email: <a class="contactadddr" href="mailto:samurai2014-contact@ipsj.or.jp">
-          samurai2014-contact@ipsj.or.jp</a></p>        
+                samurai2014-contact@ipsj.or.jp</a></p>        
             <h3>決勝共催</h3>
             <p></p>
           </section>
