Update English Site

--- a/index-jp.html
+++ b/index-jp.html
@@ -105,6 +105,7 @@
         <li>安本慶一（奈良先端科学技術大学院大学）</li>
         <li>新田淳（日立製作所）</li>
       </ul>
+    </section>
 
     <!--#include virtual="footer-jp.html" -->
 <footer>
