--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <ul>
         <li><a href=".">Home</a></li>
         <li><a href="#">Schedule</a></li>
-        <li><a href="#">Rules</a></li>
+        <li><a href="rule.html">Rules</a></li>
         <li><a href="#">Software</a></li>
         <li><a href="#">Entry</a></li>
         <li><a href="#">Prelminary</a></li>
@@ -52,12 +52,22 @@ aimings to cultivate the younger generation so they can become leading researche
       </ul>
     </section>
 
+   <section id="prize">
+      <h2>Prize</h2>
+      <p>World Final contestants who are not IPSJ members will receive one-year 
+        IPSJ membership including IPSJ digital library access (TBD). </p>
+
+      <p>Travel expenses of World Final contestants will be partially supported. </p>
+      <p>All World Final contestants will be presented on the contest site. </p>
+    </section>
+
     <section id="importantdates">
       <h2>Important Dates</h2>
       <ul>
-	<li>Rule and platform announcement: September, 2014 (TBD)</li>
-	<li>Online preliminary round: November or December, 2014 (TBD)</li>
-	<li>Final round in Kyoto: March 18, 2015</li>
+      	<li>Rule and platform announcement, submission open: mid-October, 2014</li>
+      	<li>Preliminary round submission due: December 5th , 2014</li>
+      	<li>Preliminary round result announcement: December 15th, 2014</li>
+        <li>World final round in Kyoto (collocated with 77th IPSJ Annual Convention): March 18, 2015</li>
       </ul>
     </section>
 
@@ -69,6 +79,34 @@ This year new game rule and platform will be used.)
       <img src="images/gamefield.png" alt="Rokkaku Conquest Game Field"
 	   title="Rokkaku Conquest Game Field"/>
     </section>
+
+    <section id="committee">
+      <h2>Committee</h2>
+
+      <h3>Director</h3>
+      <ul>
+        <li>Hironori Washizaki</li>
+      </ul>
+      <h3>Executive Advisor</h3>
+      <ul>
+        <li>Ikuo Takeuchi</li>
+      </ul>
+      <h3>Member</h3>
+      <ul>
+        <li>Takashi Chikayama</li>
+        <li>Shingo Takeda</li>
+        <li>Matsuki Yoshino</li>
+        <li>Hitoshi Matsubara</li>
+        <li>Kazunori Sakamoto</li>
+        <li>Tetsuro Tanaka</li>
+        <li>Kiyoshi Honda</li>
+        <li>Tasuku Hiraishi</li>
+        <li>Seiji Sato</li>
+        <li>Keiichi Yasumoto</li>
+        <li>Jun Nitta</li>
+      </ul>
+    </section>
+
     <!--#include virtual="footer.html" -->
 <footer>
   <div>
@@ -102,9 +140,8 @@ web: <a href="http://www.ipsj.or.jp">http://www.ipsj.or.jp</a>
 	<td>
 	  <section id="supporters">
 	    <h3>Supporters</h3>
-	    <p class="smaller">
-	    (TBD)
-	    </p>
+      <p>Graduate School of Informatics, Kyoto University</p>
+      <p>Academic Center for Computing and Media Studies, Kyoto University</p>
 	  </section>
 	</td>
       </tr>
