Update supporters information

--- a/index.html
+++ b/index.html
@@ -140,8 +140,19 @@ web: <a href="http://www.ipsj.or.jp">http://www.ipsj.or.jp</a>
 	<td>
 	  <section id="supporters">
 	    <h3>Supporters</h3>
-      <p>Graduate School of Informatics, Kyoto University</p>
-      <p>Academic Center for Computing and Media Studies, Kyoto University</p>
+        <p>Japan Information Technology Service Industry Association</p>
+        <p>Japan Electronics and Information Technology Industries Association</p>
+        <p>The Institute of Electronics, Information and Communication Engineers</p>
+        <p>The Japanese Society for Artificial Intelligence</p>
+        <p>Japan Society for Software Science and Technology</p>
+        <p>Japan Users Association of Information Systems</p>
+        <p>IEEE-Computer Society</p>
+        <p>IEEE-Computer Society Japan Chapter</p>
+        <p>IEEE Japan Office</p>
+        <p>Information technology Promotion Agency Japan</p>
+        <p>Graduate School of Informatics, Kyoto University</p>
+        <p>Academic Center for Computing and Media Studies, Kyoto University</p>
+        <p>International Information Science Foundation</p>
 	  </section>
 	</td>
       </tr>
