--- a/index-jp.html
+++ b/index-jp.html
@@ -112,31 +112,42 @@
   <div>
     <table class="multicolumn">
       <tr>
-	<td width="250">
-	  <section id="contact">
-	    <h3>情報処理学会</h3>
-	    <p class=address>〒101-0062 東京都千代田区駿河台1-5 化学会館 ４階</p>
-	    <p>email: <a class="contactadddr" href="mailto:samurai2014-contact@ipsj.or.jp">
-		samurai2014-contact@ipsj.or.jp</a></p>				
-	    <h3>決勝共催</h3>
-	    <p></p>
-	  </section>
-	</td>
-	<td width="300">
-	  <section id="sponsors">
-	    <h3>将軍スポンサー</h3>
-	    <h3>プラチナスポンサー</h3>
-	    <h3>ゴールドスポンサー</h3>
-	  </section>
-	</td>
-	<td>
-	  <section id="supporters">
-	    <h3>協賛</h3>
-        <p>京都大学大学院情報学研究科</p>
-        <p>学術情報メディアセンター</p>
-	    <h3>後援</h3>
-	  </section>
-	</td>
+        <td width="250">
+          <section id="contact">
+            <h3>情報処理学会</h3>
+            <p class=address>〒101-0062 東京都千代田区駿河台1-5 化学会館 ４階</p>
+            <p>email: <a class="contactadddr" href="mailto:samurai2014-contact@ipsj.or.jp">
+          samurai2014-contact@ipsj.or.jp</a></p>        
+            <h3>決勝共催</h3>
+            <p></p>
+          </section>
+        </td>
+        <td width="300">
+          <section id="sponsors">
+            <h3>将軍スポンサー</h3>
+            <h3>プラチナスポンサー</h3>
+            <h3>ゴールドスポンサー</h3>
+          </section>
+        </td>
+        <td>
+          <section id="supporters">
+            <h3>協賛</h3>
+              <p>一般社団法人 情報サービス産業協会</p>
+              <p>一般社団法人 電子情報技術産業協会</p>
+              <p>一般社団法人 電子情報通信学会</p>
+              <p>一般社団法人 人工知能学会</p>
+              <p>一般社団法人 日本ソフトウェア科学会</p>
+              <p>一般社団法人 日本情報システム・ユーザー協会</p>
+              <p>IEEE-Computer Society</p>
+              <p>IEEE-Computer Society Japan Chapter</p>
+              <p>IEEE Japan Office</p>
+              <p>独立行政法人 情報処理推進機構</p>
+              <p>京都大学 情報学研究科</p>
+              <p>京都大学 学術情報メディアセンター</p>
+              <p>財団法人 情報科学国際交流財団</p>
+            <h3>後援</h3>
+          </section>
+        </td>
       </tr>
     </table>
   </div>
