make smaller the sponsers and update schedule

--- a/index-jp.html
+++ b/index-jp.html
@@ -56,7 +56,7 @@
 
     <section id="prize">
       <h2>特典</h2>
-      <p>決勝出場者は、情報処理学会非会員の場合に一年間の会員権を獲得します（予定）。</br>
+      <p>決勝出場者については、情報処理学会非会員の場合に情報処理学会の入会金（正会員のみ）および一年間の会費が無料となり、一年間の会員権を得ます。</br>
       会員権には、情報処理学会デジタルライブラリへのアクセス権利も含まれます。</p>
 
       <p>また決勝出場者は、決勝出場の旅費補助を受けられます。</p>
@@ -66,10 +66,10 @@
     <section id="importantdates">
       <h2>主要日程</h2>
       <ul>
-        <li>ルール公開、応募受付開始：2014年10月中旬</li>
-        <li>オンライン予選応募締切　：2014年12月 5日</li>
-        <li>オンライン予選結果発表　：2014年12月15日</li>
-        <li>決勝（於 京都大学） 　　：2015年3月18日　※情報処理学会第77回全国大会併催</li>
+        <li>ルール公開、応募受付開始：2014年10月31日</li>
+        <li>オンライン予選応募締切　：2014年12月12日</li>
+        <li>オンライン予選結果発表　：2014年12月22日</li>
+        <li>決勝（於 京都大学） 　　：2015年 3月18日　※情報処理学会第77回全国大会併催</li>
       </ul>
     </section>
 
@@ -132,20 +132,26 @@
         <td>
           <section id="supporters">
             <h3>協賛</h3>
-              <p>一般社団法人 情報サービス産業協会</p>
-              <p>一般社団法人 電子情報技術産業協会</p>
-              <p>一般社団法人 電子情報通信学会</p>
-              <p>一般社団法人 人工知能学会</p>
-              <p>一般社団法人 日本ソフトウェア科学会</p>
-              <p>一般社団法人 日本情報システム・ユーザー協会</p>
-              <p>IEEE-Computer Society</p>
-              <p>IEEE-Computer Society Japan Chapter</p>
-              <p>IEEE Japan Office</p>
-              <p>独立行政法人 情報処理推進機構</p>
-              <p>京都大学 情報学研究科</p>
-              <p>京都大学 学術情報メディアセンター</p>
-              <p>財団法人 情報科学国際交流財団</p>
+            <p class="smaller">
+              一般社団法人 情報サービス産業協会<br>
+              一般社団法人 電子情報技術産業協会<br>
+              一般社団法人 電子情報通信学会<br>
+              一般社団法人 人工知能学会<br>
+              一般社団法人 日本ソフトウェア科学会<br>
+              一般社団法人 日本情報システム・ユーザー協会<br>
+              IEEE-Computer Society<br>
+              IEEE-Computer Society Japan Chapter<br>
+              IEEE Japan Office<br>
+              京都大学 情報学研究科<br>
+              京都大学 学術情報メディアセンター<br>
+              財団法人 情報科学国際交流財団<br>
+            </p>
+          </section>
+          <section id="backers">
             <h3>後援</h3>
+            <p class="smaller">
+              独立行政法人 情報処理推進機構<br>
+            </p>
           </section>
         </td>
       </tr>
