--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@ aimings to cultivate the younger generation so they can become leading researche
 
    <section id="prize">
       <h2>Prize</h2>
-      <p>World Final contestants who are not IPSJ members will receive one-year 
-        IPSJ membership including IPSJ digital library access (TBD). </p>
+      <p>World Final contestants who are not IPSJ members will receive one-year IPSJ membership without any entry fee and annual fee. (The entry fee is originally necessary for IPSJ regular members.)</p>
 
       <p>Travel expenses of World Final contestants will be partially supported. </p>
       <p>All World Final contestants will be presented on the contest site. </p>
@@ -64,9 +63,9 @@ aimings to cultivate the younger generation so they can become leading researche
     <section id="importantdates">
       <h2>Important Dates</h2>
       <ul>
-      	<li>Rule and platform announcement, submission open: mid-October, 2014</li>
-      	<li>Preliminary round submission due: December 5th , 2014</li>
-      	<li>Preliminary round result announcement: December 15th, 2014</li>
+      	<li>Rule and platform announcement, submission open: October 31st, 2014</li>
+      	<li>Preliminary round submission due: December 12th , 2014</li>
+      	<li>Preliminary round result announcement: December 22nd, 2014</li>
         <li>World final round in Kyoto (collocated with 77th IPSJ Annual Convention): March 18, 2015</li>
       </ul>
     </section>
@@ -94,7 +93,7 @@ This year new game rule and platform will be used.)
       <h3>Member</h3>
       <ul>
         <li>Takashi Chikayama</li>
-        <li>Shingo Takeda</li>
+        <li>Shingo Takada</li>
         <li>Matsuki Yoshino</li>
         <li>Hitoshi Matsubara</li>
         <li>Kazunori Sakamoto</li>
@@ -112,49 +111,50 @@ This year new game rule and platform will be used.)
   <div>
     <table class="multicolumn">
       <tr>
-	<td width="250">
-	  <section id="contact">
-	    <h3>Information Processing Society of Japan</a></h3>
-	    <p class=address>Kagaku-kaikan (Chemistry Hall) 4F<br>
-	      1-5 Kanda-Surugadai, Chiyoda-ku,
-	      Tokyo 101-0062 JAPAN<br>
-	    email: <a class="contactadddr" href="mailto:samurai2014-contact@ipsj.or.jp">
+      	<td width="250">
+      	  <section id="contact">
+      	    <h3>Information Processing Society of Japan</a></h3>
+      	    <p class=address>Kagaku-kaikan (Chemistry Hall) 4F<br>
+      	      1-5 Kanda-Surugadai, Chiyoda-ku,
+      	      Tokyo 101-0062 JAPAN<br>
+      	    email: <a class="contactadddr" href="mailto:samurai2014-contact@ipsj.or.jp">
 
-		samurai2014-contact@ipsj.or.jp</a><br>
-web: <a href="http://www.ipsj.or.jp">http://www.ipsj.or.jp</a>
-</p>				
-	    <h3>Final Round Cosponsor</h3>
-	    <p>(TBD)</p>
-	  </section>
-	</td>
-	<td width="300">
-	  <section id="sponsors">
-	    <h3>Shogun Sponsor</h3>
-	    (TBD)
-	    <h3>Platinum Sponsor</h3>
-	    (TBD)
-	    <h3>Gold Sponsors</h3>
-	    (TBD)
-	  </section>
-	</td>
-	<td>
-	  <section id="supporters">
-	    <h3>Supporters</h3>
-        <p>Japan Information Technology Service Industry Association</p>
-        <p>Japan Electronics and Information Technology Industries Association</p>
-        <p>The Institute of Electronics, Information and Communication Engineers</p>
-        <p>The Japanese Society for Artificial Intelligence</p>
-        <p>Japan Society for Software Science and Technology</p>
-        <p>Japan Users Association of Information Systems</p>
-        <p>IEEE-Computer Society</p>
-        <p>IEEE-Computer Society Japan Chapter</p>
-        <p>IEEE Japan Office</p>
-        <p>Information technology Promotion Agency Japan</p>
-        <p>Graduate School of Informatics, Kyoto University</p>
-        <p>Academic Center for Computing and Media Studies, Kyoto University</p>
-        <p>International Information Science Foundation</p>
-	  </section>
-	</td>
+      		  samurai2014-contact@ipsj.or.jp</a><br>
+            web: <a href="http://www.ipsj.or.jp">http://www.ipsj.or.jp</a>
+            </p>				
+      	    <h3>Final Round Cosponsor</h3>
+      	    <p>(TBD)</p>
+      	  </section>
+      	</td>
+      	<td width="300">
+      	  <section id="sponsors">
+      	    <h3>Shogun Sponsor</h3>
+      	    (TBD)
+      	    <h3>Platinum Sponsor</h3>
+      	    (TBD)
+      	    <h3>Gold Sponsors</h3>
+      	    (TBD)
+      	  </section>
+      	</td>
+      	<td>
+      	  <section id="supporters">
+      	    <h3>Supporters</h3>
+            <p class="smaller">
+              Japan Information Technology Service Industry Association<br>
+              Japan Electronics and Information Technology Industries Association<br>
+              The Institute of Electronics, Information and Communication Engineers<br>
+              The Japanese Society for Artificial Intelligence<br>
+              Japan Society for Software Science and Technology<br>
+              Japan Users Association of Information Systems<br>
+              IEEE-Computer Society<br>
+              IEEE-Computer Society Japan Chapter<br>
+              IEEE Japan Office<br>
+              Graduate School of Informatics, Kyoto University<br>
+              Academic Center for Computing and Media Studies, Kyoto University<br>
+              International Information Science Foundation<br>
+            </p>
+          </section>
+      	</td>
       </tr>
     </table>
   </div>
