--- a/rule.html
+++ b/rule.html
@@ -48,49 +48,51 @@
   <div>
     <table class="multicolumn">
       <tr>
-  <td width="250">
-    <section id="contact">
-      <h3>Information Processing Society of Japan</a></h3>
-      <p class=address>Kagaku-kaikan (Chemistry Hall) 4F<br>
-        1-5 Kanda-Surugadai, Chiyoda-ku,
-        Tokyo 101-0062 JAPAN<br>
-      email: <a class="contactadddr" href="mailto:samurai2014-contact@ipsj.or.jp">
+        <td width="250">
+          <section id="contact">
+            <h3>Information Processing Society of Japan</a></h3>
+            <p class=address>Kagaku-kaikan (Chemistry Hall) 4F<br>
+              1-5 Kanda-Surugadai, Chiyoda-ku,
+              Tokyo 101-0062 JAPAN<br>
+            email: <a class="contactadddr" href="mailto:samurai2014-contact@ipsj.or.jp">
 
-    samurai2014-contact@ipsj.or.jp</a><br>
-web: <a href="http://www.ipsj.or.jp">http://www.ipsj.or.jp</a>
-</p>        
-      <h3>Final Round Cosponsor</h3>
-      <p>(TBD)</p>
-    </section>
-  </td>
-  <td width="300">
-    <section id="sponsors">
-      <h3>Shogun Sponsor</h3>
-      (TBD)
-      <h3>Platinum Sponsor</h3>
-      (TBD)
-      <h3>Gold Sponsors</h3>
-      (TBD)
-    </section>
-  </td>
-  <td>
-    <section id="supporters">
-      <h3>Supporters</h3>
-        <p>Japan Information Technology Service Industry Association</p>
-        <p>Japan Electronics and Information Technology Industries Association</p>
-        <p>The Institute of Electronics, Information and Communication Engineers</p>
-        <p>The Japanese Society for Artificial Intelligence</p>
-        <p>Japan Society for Software Science and Technology</p>
-        <p>Japan Users Association of Information Systems</p>
-        <p>IEEE-Computer Society</p>
-        <p>IEEE-Computer Society Japan Chapter</p>
-        <p>IEEE Japan Office</p>
-        <p>Information technology Promotion Agency Japan</p>
-        <p>Graduate School of Informatics, Kyoto University</p>
-        <p>Academic Center for Computing and Media Studies, Kyoto University</p>
-        <p>International Information Science Foundation</p>
-    </section>
-  </td>
+            samurai2014-contact@ipsj.or.jp</a><br>
+            web: <a href="http://www.ipsj.or.jp">http://www.ipsj.or.jp</a>
+            </p>        
+            <h3>Final Round Cosponsor</h3>
+            <p>(TBD)</p>
+          </section>
+        </td>
+        <td width="300">
+          <section id="sponsors">
+            <h3>Shogun Sponsor</h3>
+            (TBD)
+            <h3>Platinum Sponsor</h3>
+            (TBD)
+            <h3>Gold Sponsors</h3>
+            (TBD)
+          </section>
+        </td>
+        <td>
+          <section id="supporters">
+            <h3>Supporters</h3>
+            <p class="smaller">
+              Japan Information Technology Service Industry Association<br>
+              Japan Electronics and Information Technology Industries Association<br>
+              The Institute of Electronics, Information and Communication Engineers<br>
+              The Japanese Society for Artificial Intelligence<br>
+              Japan Society for Software Science and Technology<br>
+              Japan Users Association of Information Systems<br>
+              IEEE-Computer Society<br>
+              IEEE-Computer Society Japan Chapter<br>
+              IEEE Japan Office<br>
+              Graduate School of Informatics, Kyoto University<br>
+              Academic Center for Computing and Media Studies, Kyoto University<br>
+              International Information Science Foundation<br>
+              Information technology Promotion Agency Japan<br>
+            </p>
+          </section>
+        </td>
       </tr>
     </table>
   </div>
