--- a/rule-jp.html
+++ b/rule-jp.html
@@ -68,20 +68,26 @@ C, C++, C#, Java, Scala, Ruby, Python, Perl, PHP, Haskell, JavaScript
         <td>
           <section id="supporters">
             <h3>協賛</h3>
-              <p>一般社団法人 情報サービス産業協会</p>
-              <p>一般社団法人 電子情報技術産業協会</p>
-              <p>一般社団法人 電子情報通信学会</p>
-              <p>一般社団法人 人工知能学会</p>
-              <p>一般社団法人 日本ソフトウェア科学会</p>
-              <p>一般社団法人 日本情報システム・ユーザー協会</p>
-              <p>IEEE-Computer Society</p>
-              <p>IEEE-Computer Society Japan Chapter</p>
-              <p>IEEE Japan Office</p>
-              <p>独立行政法人 情報処理推進機構</p>
-              <p>京都大学 情報学研究科</p>
-              <p>京都大学 学術情報メディアセンター</p>
-              <p>財団法人 情報科学国際交流財団</p>
+            <p class="smaller">
+              一般社団法人 情報サービス産業協会<br>
+              一般社団法人 電子情報技術産業協会<br>
+              一般社団法人 電子情報通信学会<br>
+              一般社団法人 人工知能学会<br>
+              一般社団法人 日本ソフトウェア科学会<br>
+              一般社団法人 日本情報システム・ユーザー協会<br>
+              IEEE-Computer Society<br>
+              IEEE-Computer Society Japan Chapter<br>
+              IEEE Japan Office<br>
+              京都大学 情報学研究科<br>
+              京都大学 学術情報メディアセンター<br>
+              財団法人 情報科学国際交流財団<br>
+            </p>
+          </section>
+          <section id="backers">
             <h3>後援</h3>
+            <p class="smaller">
+              独立行政法人 情報処理推進機構<br>
+            </p>
           </section>
         </td>
       </tr>
