--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ aimings to cultivate the younger generation so they can become leading researche
     <section id="news">
       <h2>News</h2>
       <ul>
+	<li>Nov 7: <a href="http://arena.ai-comp.net/">The online execution server</a> has been opened. Note that <a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.en.md">the game rule</a> is still beta. We plan to update the game rule in few days.
 	<li>May 1: This preliminary website has been launched.
-	</li>
       </ul>
     </section>
 
