Update All pages

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
   <nav id="global">
       <ul>
         <li><a href=".">Home</a></li>
-        <li><a href="#">Schedule</a></li>
-        <li><a href="rule.html">Rules</a></li>
-        <li><a href="#">Software</a></li>
-        <li><a href="#">Entry</a></li>
-        <li><a href="#">Prelminary</a></li>
-        <li><a href="#">Final</a></li>
-        <li><a href="#">FAQ</a></li>
+        <li><a href="schedule.html">Schedule</a></li>
+        <li><a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.en.md">Rules</a></li>
+        <li><a href="http://arena.ai-comp.net/">Software</a></li>
+        <li><a href="http://goo.gl/forms/pUwQG78Xlq">Entry</a></li>
+        <li><a href="preliminary.html">Prelminary</a></li>
+        <li><a href="final.html">Final</a></li>
+        <li><a href="faq.html">FAQ</a></li>
         <li><a href="index-jp.html">Japanese</a></li>
       </ul>
   </nav>
@@ -63,8 +63,8 @@ aimings to cultivate the younger generation so they can become leading researche
     <section id="importantdates">
       <h2>Important Dates</h2>
       <ul>
-      	<li>Rule and platform announcement, submission open: October 31st, 2014</li>
-      	<li>Preliminary round submission due: December 12th , 2014</li>
+      	<li>Rule and platform announcement, submission open: November 14th, 2014</li>
+      	<li>Preliminary round submission due: December 21st , 2014</li>
       	<li>Preliminary round result announcement: December 22nd, 2014</li>
         <li>World final round in Kyoto (collocated with 77th IPSJ Annual Convention): March 18, 2015</li>
       </ul>
@@ -121,13 +121,14 @@ This year new game rule and platform will be used.)
 
       		  samurai2014-contact@ipsj.or.jp</a><br>
             web: <a href="http://www.ipsj.or.jp">http://www.ipsj.or.jp</a>
-            </p>				
-      	    <h3>Final Round Cosponsor</h3>
-      	    <p>(TBD)</p>
+            </p>
       	  </section>
       	</td>
       	<td width="300">
       	  <section id="sponsors">
+            <h3>Event Sponsor</h3>
+            <p>Recruit Holdings / Indeed</p>
+            <img src="images/1_Brandlogo_Color.jpg" title="logo_recruit" width="200"/>
       	    <h3>Shogun Sponsor</h3>
       	    (TBD)
       	    <h3>Platinum Sponsor</h3>
