--- a/final-jp.html
+++ b/final-jp.html
@@ -30,31 +30,11 @@
 </header>
 <hr/>
 
-    <section id="main">
-      <h2>スポンサー募集</h2>
-      <p>
-情報処理学会では2012年度より、新たな取り組みといたしまして、昨今
-のインターネット産業の急速な発展によるエンジニアの質と量の確保が
-ますます重要となるなか、若い世代から将来第一線の研究者や開発者に
-なりうる、また世界市場を舞台に活躍できる人材を育てることを開催の
-目的として、AIプログラミングコンテスト、
-IPSJ International AI Programming Contest "SamurAI Coding" を開催
-しております。
-      </p>
-      <p>
-今年度も SamurAI Coding 2014-15 を開催いたします。ゲームをテーマ
-にしたプログラミングスキルを競います。世界規模の大会を目指し、世界
-中から参加者を募りネット上で予選を開催、予選を勝ち抜いたチームが
-2015年3月に日本で開催する決勝へ進みます。参加エンジニアはその能力
-が世界で通用するか本コンテストを通じて試すことができます。
-決勝では、アワードセレモニーも開催し、上位入賞者を表彰します。
-決勝進出者、スポンサー企業の皆様等との交流の場として懇親会の席も設
-ける予定です。
-ご賛同を頂ける場合には、<a href="https://www.ipsj.or.jp/02moshikomi/event/samurai_coding2014-15_sponsor.html">こちらの申込Webページ</a>よりお申込ください。
-      </p>
+    <section id="importantdates">
+      <h2>決勝</h2>
+      <p>決勝は情報処理学会 第77回全国大会に併設される予定です。</p>
     </section>
 
-    <!--#include virtual="footer-jp.html" -->
 <footer>
   <div>
     <table class="multicolumn">
