--- a/index-jp.html
+++ b/index-jp.html
@@ -74,10 +74,10 @@
     </section>
 
     <section class="centered">
-(以下のスクリーンショットは2012年度のものです。
-2014年度は新たなルール・プラットフォームを用います。)
-      <img src="images/gamefield.png" alt="Rokkaku Conquest Game Field"
-	   title="Rokkaku Conquest Game Field"/>
+      <p>(以下のスクリーンショットは関連する過去のコンテストJavaChallenge2014のものです。SamurAI Coding 2014-15は更新されたルール・プラットフォームを用います。)
+      </p>
+      <img src="images/JavaChallenge1.png" width="300" title="Lang Wars"/>
+      <img src="images/JavaChallenge2.png" width="300" title="Lang Wars"/>
     </section>
 
     <section id="committee">
@@ -118,13 +118,16 @@
             <p class=address>〒101-0062 東京都千代田区駿河台1-5 化学会館 ４階</p>
             <p>email: <a class="contactadddr" href="mailto:samurai2014-contact@ipsj.or.jp">
           samurai2014-contact@ipsj.or.jp</a></p>
+          <img src="images/IPSJ_logoB_M.gif" width="200"/>
           </section>
         </td>
         <td width="300">
           <section id="sponsors">
             <h3>イベントスポンサー</h3>
-            <p>リクルートホールディングス / Indeed</p>
-            <img src="images/1_Brandlogo_Color.jpg" title="logo_recruit" width="200"/>
+            <p>リクルートホールディングス</p>
+            <p><img src="images/1_Brandlogo_Color.jpg" width="200"/></p>
+            <p>Indeed</p>
+            <p><img src="images/indeed.png" width="200"/></p>
             <h3>将軍スポンサー</h3>
             <h3>プラチナスポンサー</h3>
             <h3>ゴールドスポンサー</h3>
