--- a/index.html
+++ b/index.html
@@ -71,12 +71,10 @@ aimings to cultivate the younger generation so they can become leading researche
     </section>
 
     <section class="centered">
-<p>
-      (The following screenshot is taken from 2012. 
-This year new game rule and platform will be used.)
-</p>
-      <img src="images/gamefield.png" alt="Rokkaku Conquest Game Field"
-	   title="Rokkaku Conquest Game Field"/>
+      <p>(The following screenshots are taken from a related contest JavaChallenge 2014. In the SamurAI Coding, newly revised game rule and platform are  used.)
+      </p>
+      <img src="images/JavaChallenge1.png" width="300" title="Lang Wars"/>
+      <img src="images/JavaChallenge2.png" width="300" title="Lang Wars"/>
     </section>
 
     <section id="committee">
@@ -122,13 +120,16 @@ This year new game rule and platform will be used.)
       		  samurai2014-contact@ipsj.or.jp</a><br>
             web: <a href="http://www.ipsj.or.jp">http://www.ipsj.or.jp</a>
             </p>
+            <img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/>
       	  </section>
       	</td>
       	<td width="300">
       	  <section id="sponsors">
             <h3>Event Sponsor</h3>
-            <p>Recruit Holdings / Indeed</p>
-            <img src="images/1_Brandlogo_Color.jpg" title="logo_recruit" width="200"/>
+            <p>Recruit Holdings</p>
+            <p><img src="images/1_Brandlogo_Color.jpg" width="200"/></p>
+            <p>Indeed</p>
+            <p><img src="images/indeed.png" width="200"/></p>
       	    <h3>Shogun Sponsor</h3>
       	    (TBD)
       	    <h3>Platinum Sponsor</h3>
