--- a/final.html
+++ b/final.html
@@ -49,13 +49,16 @@
             samurai2014-contact@ipsj.or.jp</a><br>
             web: <a href="http://www.ipsj.or.jp">http://www.ipsj.or.jp</a>
             </p>
+            <img src="images/IPSJ_logoC_M.gif" title="logo_ipsj" width="200"/>
           </section>
         </td>
         <td width="300">
           <section id="sponsors">
             <h3>Event Sponsor</h3>
-            <p>Recruit Holdings / Indeed</p>
-            <img src="images/1_Brandlogo_Color.jpg" title="logo_recruit" width="200"/>
+            <p>Recruit Holdings</p>
+            <p><img src="images/1_Brandlogo_Color.jpg" width="200"/></p>
+            <p>Indeed</p>
+            <p><img src="images/indeed.png" width="200"/></p>
             <h3>Shogun Sponsor</h3>
             (TBD)
             <h3>Platinum Sponsor</h3>
