--- a/schedule-jp.html
+++ b/schedule-jp.html
@@ -50,13 +50,16 @@
             <p class=address>〒101-0062 東京都千代田区駿河台1-5 化学会館 ４階</p>
             <p>email: <a class="contactadddr" href="mailto:samurai2014-contact@ipsj.or.jp">
           samurai2014-contact@ipsj.or.jp</a></p>
+          <img src="images/IPSJ_logoB_M.gif" title="logo_ipsj" width="200"/>
           </section>
         </td>
         <td width="300">
           <section id="sponsors">
             <h3>イベントスポンサー</h3>
-            <p>リクルートホールディングス / Indeed</p>
-            <img src="images/1_Brandlogo_Color.jpg" title="logo_recruit" width="200"/>
+            <p>リクルートホールディングス</p>
+            <p><img src="images/1_Brandlogo_Color.jpg" width="200"/></p>
+            <p>Indeed</p>
+            <p><img src="images/indeed.png" width="200"/></p>
             <h3>将軍スポンサー</h3>
             <h3>プラチナスポンサー</h3>
             <h3>ゴールドスポンサー</h3>
