--- a/index-jp.html
+++ b/index-jp.html
@@ -49,7 +49,7 @@
     <section id="news">
       <h2>ニュース</h2>
       <ul>
-	<li>11月7日: <a href="http://arena.ai-comp.net/">オンライン対戦サーバ</a>を公開しました。なお、現在の<a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.en.md">ゲームルール</a>はベータ版です。近日中に更新予定です。
+	<li>11月14日: <a href="http://arena.ai-comp.net/">オンライン対戦サーバ</a>を公開しました。<a href="https://github.com/AI-comp/SamurAICoding2014/blob/master/Rule.en.md">ゲームルール</a>もご参照ください。
 	<li>8月4日: <a href="sponsor-jp.html">スポンサーの募集</a>を開始しました。
 	<li>5月1日: 本予告サイトを立ち上げました。
       </ul>
