--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ aimings to cultivate the younger generation so they can become leading researche
 	<a href="http://www.ipsj.or.jp/event/samuraicoding/2013/final-result-jp.html">2nd Final Results in 2013</a>).
       <p>3rd SamurAI Coding will held between September 2014 and March 2015.
 	Contestants will be competing their engineering skills for AI game programming and 
-	the winners of the preliminary round will move on to the final round, which will be held on March 18 2015 collocated with 77th IPSJ National Convention in Kyoto (TBD).
+	the winners of the preliminary round will move on to the final round, which will be held on March 18 2015 collocated with <a href="http://www.kyoto-u.ac.jp/en/access/"></a>77th IPSJ National Convention in Kyoto</a>.
 	Participating engineers will be able to measure their skills on a global level through this contest.</p>
     </section>
     <section id="news">
@@ -57,8 +57,15 @@ aimings to cultivate the younger generation so they can become leading researche
       <h2>Prize</h2>
       <p>World Final contestants who are not IPSJ members will receive one-year IPSJ membership without any entry fee and annual fee. (The entry fee is originally necessary for IPSJ regular members.)</p>
 
-      <p>Travel expenses of World Final contestants will be partially supported. </p>
+      <p>Travel expenses of World final contestants will be partially supported.
+World Final will be held in the beautiful ancient city of Kyoto, Japan.
+Kyoto is named the <a href="http://kyoto.travel/"></a>World's Best City in the Travel + Leisure</a>. 
+Last year World final contestants from out side of Japan received 
+travel expenses up to 100,000JPY, and contestants from a long distance
+within Japan received full travel expenses. 
+</p>
       <p>All World Final contestants will be presented on the contest site. </p>
+      <p>Moreover winners of World Final might receive some prizes. (TBD)</p>
     </section>
 
     <section id="importantdates">
