--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ aimings to cultivate the younger generation so they can become leading researche
 	<a href="http://www.ipsj.or.jp/event/samuraicoding/2013/final-result-jp.html">2nd Final Results in 2013</a>).
       <p>3rd SamurAI Coding will held between September 2014 and March 2015.
 	Contestants will be competing their engineering skills for AI game programming and 
-	the winners of the preliminary round will move on to the final round, which will be held on March 18 2015 collocated with <a href="http://www.kyoto-u.ac.jp/en/access/"></a>77th IPSJ National Convention in Kyoto</a>.
+	the winners of the preliminary round will move on to the final round, which will be held on March 18 2015 collocated with 77th IPSJ National Convention in Kyoto at <a href="http://www.kyoto-u.ac.jp/en/access/">Kyoto University</a>.
 	Participating engineers will be able to measure their skills on a global level through this contest.</p>
     </section>
     <section id="news">
