--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ aimings to cultivate the younger generation so they can become leading researche
 
       <p>Travel expenses of World final contestants will be partially supported.
 World Final will be held in the beautiful ancient city of Kyoto, Japan.
-Kyoto is named the <a href="http://kyoto.travel/"></a>World's Best City in the Travel + Leisure</a>. 
+Kyoto is named the <a href="http://kyoto.travel/">World's Best City in the Travel + Leisure</a>. 
 Last year World final contestants from out side of Japan received 
 travel expenses up to 100,000JPY, and contestants from a long distance
 within Japan received full travel expenses. 
@@ -74,7 +74,7 @@ within Japan received full travel expenses.
       	<li>Rule and platform announcement, submission open: November 14th, 2014</li>
       	<li>Preliminary round submission due: December 21st , 2014</li>
       	<li>Preliminary round result announcement: December 22nd, 2014</li>
-        <li>World final round in Kyoto (collocated with 77th IPSJ Annual Convention): March 18, 2015</li>
+        <li>World final round in Kyoto (collocated with 77th IPSJ Annual Convention at <a href="http://www.kyoto-u.ac.jp/en/access/"></a>Kyoto University</a>): March 18, 2015</li>
       </ul>
     </section>
 
