--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ within Japan received full travel expenses.
       	<li>Rule and platform announcement, submission open: November 14th, 2014</li>
       	<li>Preliminary round submission due: December 21st , 2014</li>
       	<li>Preliminary round result announcement: December 22nd, 2014</li>
-        <li>World final round in Kyoto (collocated with 77th IPSJ Annual Convention at <a href="http://www.kyoto-u.ac.jp/en/access/"></a>Kyoto University</a>): March 18, 2015</li>
+        <li>World final round in Kyoto (collocated with 77th IPSJ Annual Convention at <a href="http://www.kyoto-u.ac.jp/en/access/">Kyoto University</a>): March 18, 2015</li>
       </ul>
     </section>
 
@@ -88,28 +88,10 @@ within Japan received full travel expenses.
     <section id="committee">
       <h2>Committee</h2>
 
-      <h3>Director</h3>
-      <ul>
-        <li>Hironori Washizaki</li>
-      </ul>
-      <h3>Executive Advisor</h3>
-      <ul>
-        <li>Ikuo Takeuchi</li>
-      </ul>
-      <h3>Member</h3>
-      <ul>
-        <li>Takashi Chikayama</li>
-        <li>Shingo Takada</li>
-        <li>Matsuki Yoshino</li>
-        <li>Hitoshi Matsubara</li>
-        <li>Kazunori Sakamoto</li>
-        <li>Tetsuro Tanaka</li>
-        <li>Kiyoshi Honda</li>
-        <li>Tasuku Hiraishi</li>
-        <li>Seiji Sato</li>
-        <li>Keiichi Yasumoto</li>
-        <li>Jun Nitta</li>
-      </ul>
+ <p>Hironori Washizaki (Director), Ikuo Takeuchi (Executive Advisor), 
+ Takashi Chikayama, Shingo Takada, Matsuki Yoshino,  Hitoshi Matsubara, Kazunori Sakamoto, 
+ Tetsuro Tanaka, Kiyoshi Honda, Tasuku Hiraishi, Seiji Sato, Keiichi Yasumoto, Jun Nitta
+ </p>
     </section>
 
     <!--#include virtual="footer.html" -->
